Changed Folder Structure & Added SCAN Disk Scheduling